[gd_scene load_steps=11 format=3 uid="uid://c4m4v70cudic"]

[ext_resource type="Texture2D" uid="uid://5vleu6f36k8o" path="res://assets/iconsMenu/retour.png" id="1_ek1hk"]
[ext_resource type="Script" path="res://scripts/pause_menu/pause_menu.gd" id="1_hgei6"]
[ext_resource type="Texture2D" uid="uid://bdx6stmjhvcfs" path="res://assets/iconsMenu/play.png" id="2_pudx5"]
[ext_resource type="Texture2D" uid="uid://dhghe1mkpacho" path="res://assets/iconsMenu/menuicon.png" id="3_epihq"]
[ext_resource type="Texture2D" uid="uid://cmpfd2oy8lnws" path="res://assets/iconsMenu/muet.png" id="3_j1qes"]
[ext_resource type="Texture2D" uid="uid://iqgx7y4sgmsn" path="res://assets/iconsMenu/musicicon.png" id="4_uenm4"]
[ext_resource type="Texture2D" uid="uid://cfgsjm6bwxk7s" path="res://assets/iconsMenu/soundicon.png" id="5_h51q1"]
[ext_resource type="Texture2D" uid="uid://2rv6y7bfgtp0" path="res://assets/iconsMenu/silencieux.png" id="5_u822b"]
[ext_resource type="Texture2D" uid="uid://bfa4ypwja7vmy" path="res://assets/iconsMenu/bugicon.png" id="6_8et76"]

[sub_resource type="Theme" id="Theme_affv6"]

[node name="MenuPause" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_hgei6")

[node name="TopLeftIcon" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 57.0
offset_top = 35.0
offset_right = 207.0
offset_bottom = 73.0
theme_override_constants/separation = 19

[node name="MusicButton" type="TextureButton" parent="TopLeftIcon"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_uenm4")
texture_pressed = ExtResource("3_j1qes")
stretch_mode = 0

[node name="SoundButton" type="TextureButton" parent="TopLeftIcon"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_h51q1")
texture_pressed = ExtResource("5_u822b")
stretch_mode = 0

[node name="BugReport" type="TextureButton" parent="TopLeftIcon"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("6_8et76")
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 493.0
offset_top = 271.0
offset_right = 813.0
offset_bottom = 465.0

[node name="MainLayout" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TitlePauseMenu" type="Label" parent="CenterContainer/MainLayout"]
layout_mode = 2
theme = SubResource("Theme_affv6")
theme_override_font_sizes/font_size = 80
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonLayer" type="HBoxContainer" parent="CenterContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="RestartButton" type="TextureButton" parent="CenterContainer/MainLayout/ButtonLayer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_ek1hk")
stretch_mode = 4

[node name="PlayButton" type="TextureButton" parent="CenterContainer/MainLayout/ButtonLayer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture_normal = ExtResource("2_pudx5")
stretch_mode = 0

[node name="HomeButton" type="TextureButton" parent="CenterContainer/MainLayout/ButtonLayer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture_normal = ExtResource("3_epihq")
stretch_mode = 0

[connection signal="pressed" from="TopLeftIcon/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="TopLeftIcon/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainLayout/ButtonLayer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainLayout/ButtonLayer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainLayout/ButtonLayer/HomeButton" to="." method="_on_home_button_pressed"]
